# storm_pick_and_place_demo

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: agimus_controller_params.yaml  linear_feedback_controller_params.yaml  object_manager_params.yaml  pick_place_task_manager_params.yaml
launch/: pick_place_real.launch.py  pick_place_sim_isaacsim.launch.py
rviz/: pick_place.rviz
scripts/: object_manager_node  pick_place_task_manager_node
storm_pick_place_demo/: __init__.py  franka_gripper_client.py  object_manager_node.py  pick_place_task_manager_node.py
urdf/: environment.urdf.xacro
